novas cenas brow

--- a/Inventory/Views/Main/PurchaseItems.cshtml
+++ b/Inventory/Views/Main/PurchaseItems.cshtml
@@ -242,6 +242,7 @@ table thead tr{
 
                         });
                                         </script>
+
                                         <script>
                         $(document).ready(function () {
                             $("#itemname").change(function () {
@@ -268,6 +269,7 @@ table thead tr{
                             });
                         });
                                         </script>
+
 
                                         <script>
                         $(document).ready(function () {
@@ -351,6 +353,8 @@ table thead tr{
                         });
 
                                         </script>
+
+
                                         <script>
                         //$(document).ready(function () {
                         //    $("#Save_Stock").click(function () {
@@ -492,6 +496,7 @@ table thead tr{
                         </div>
                         <br />
                         <div class="row" id="view_added_item">
+                        <!-- <div class="row" id="view_added_item"> -->
                         <!-- <div class="row" id="view_added_item"> -->
                             <table class="table">
                             <thead>
