--- a/Inventory/Views/Main/PurchaseItems.cshtml
+++ b/Inventory/Views/Main/PurchaseItems.cshtml
@@ -488,7 +488,7 @@ table thead tr{
                             </div>
                             <div class="col-sm-2">
                                 <p>Total</p><input type="text" class="form-control" id="total_price_per_item" name="total_price_per_item" />
-                                <input type="text" class="form-control" style="display:none" id="total_amount" value="0" name="total_amount" />
+                                <input type="text" class="form-control" style="display:none" id="total_amount" value="0" name="total_amount" placeholder="Total do Valor" />
                             </div>
                         </div>
                         <br>
